# simple-prompter

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: server.py
app/chains/: create_prompt_chain.py  generate_response_chain.py
app/utils/: helpers.py
data/: prompting.txt
notebooks/: experiment.ipynb
notebooks/.ipynb_checkpoints/: experiment-checkpoint.ipynb
